--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: 
+  name: exam2025
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: 
+      app: exam2025
   template:
     metadata:
       labels:
-        app: 
+        app: exam2025
     spec:
       containers:
       - name: exam2025
@@ -20,11 +20,11 @@ spec:
         - containerPort: 5001
         env:
           - name: GCP_BUCKET_NAME
-            value: "REPLACE_BUCKET_NAME"
+            value: "adrianlopezlanchares-bucket-examen-final"
         livenessProbe:
-          periodSeconds: 
+          periodSeconds: 2
           httpGet:
             path: /probe
-            port: 
+            port: 8080
 
 
