--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: 
+  name: exam2025
 spec:
   type: 
   selector:
-    app: 
+    app: exam2025
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 
+      targetPort: 8080
