--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  IMAGE_NAME: gcr.io/${{ secrets.GCP_PROJECT_ID }}/exam2025
   
 jobs:
   deploy:
